2008-05-05  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-deduce-fileset): Lift all the policy and UI
	stuff out of this function, move it to vc-dispatcher-selection-set.k

2008-05-05  Sam Steingold  <sds@gnu.org>

	* window.el (delete-other-windows-vertically): New function.

2008-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dired.el (dired-read-dir-and-switches):
	Obey read-file-name-completion-ignore-case.

2008-05-05  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Add regexp for Open Watcom compiler output.

2008-05-05  Phil Sung  <psung@mit.edu>  (tiny change)

	* progmodes/python.el (python-block-pairs): Align finally with except.

2008-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-rcs.el (vc-rcs-fetch-master-state): Fix inf-loop.

2008-05-05  Tom Tromey  <tromey@redhat.com>

	* smerge-mode.el (smerge-start-session): Don't call smerge-next if
	looking at conflict marker.

2008-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-dispatcher.el (vc-dir-mark-buffer-changed): Fix typo
	client-mode -> vc-client-object, and guess `funcall' was meant.
	(vc-dir-mode): Rename client-mode -> vc-client.mode.

2008-05-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* net/zeroconf.el (dbus-call-method, dbus-register-signal)
	(dbus-debug): Move declarations outside eval-when-compile.

2008-05-04  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el (proced-command-alist): Fix system-type values.
	Fix defcustom.
	(proced-sorting-schemes-alist, proced-sorting-scheme): New variables.
	(proced-sort-pcpu, proced-sort-pmem, proced-sort-pid)
	(proced-sort-start, proced-sort, proced-sort-time): New commands.
	(proced-update): Use proced-sorting-scheme.  Update modeline.
	(proced-send-signal): Use nreverse.
	(proced-sorting-scheme-p): New function.

2008-05-04  Andreas Schwab  <schwab@suse.de>

	* vc.el: Require dired when compiling.
